# vespa-grouping

./: .gitignore  convert_to_vespa_format.py  docker-compose.yml  install.sh  pom.xml  pyproject.toml  readme.md
my-app/src/main/application/: services.xml
my-app/src/main/application/schemas/: category_ctr.sd
my-app/src/main/application/search/query-profiles/: default.xml
my-app/src/main/application/search/query-profiles/types/: root.xml
my-app/src/main/java/my_package/: ConfigurableDedupSearcher.java  UserProfileSearcher.java
my-app/src/test/java/: DedupSearcherTestCase.java
src/main/application/: validation-overrides.xml
src/main/application/schemas/: news.sd  user.sd
src/main/java/my_package/: DedupSearcher.java
src/main/resources/configdefinitions/: dedup-searcher.def
